Do not show funding logos

--- a/OpenBio/app/templates/app/navbar2.html
+++ b/OpenBio/app/templates/app/navbar2.html
@@ -7,13 +7,13 @@
             <!-- on large and up screens -->
             <div class="hide-on-med-and-down">
                 <a href="#!" class="brand-logo left">
-                    <img style="height: 60px;" src="/static/app/images/konstantina/epanek_logo_transparent_x60.png">
+                    <!-- <img style="height: 60px;" src="/static/app/images/konstantina/epanek_logo_transparent_x60.png"> -->
                 </a>
                 <span class="brand-logo center black-text" style="top: -8px;">
                     <a href="/" style="color:black;">OpenBio.eu</a> <span style="font-size:24px;">(beta)</span>
                 </span>
                 <span class="brand-logo center black-text" style="font-size: 14px; top: 20px;">
-                    Version: {{version}} 
+                    Version: {{version}}
                     <a href="https://github.com/kantale/OpenBio.eu" target="_blank">Source</a>
                     {% if TERMS %}<a href="{{TERMS}}">Terms</a>{% endif %}
                     {% if PRIVACY %}<a href="{{PRIVACY}}">Privacy</a>{% endif %}
@@ -25,7 +25,7 @@
                     OpenBio.eu <span style="font-size:24px;">(beta)</span>
                 </span>
                 <span class="brand-logo left black-text" style="font-size: 14px; top: 20px;">
-                    Version: {{version}} 
+                    Version: {{version}}
                     <a href="https://github.com/kantale/OpenBio.eu" target="_blank">Source</a>
                 </span>
             </div>
@@ -63,8 +63,8 @@
                 <!-- <li ng-show="false"><a href="#!">Settings</a></li> -->
                 <li class="divider"></li>
                 <li><a href="logout/">Logout</a></li>
-                <li class="divider"></li>
-                <li><img style="height: 63px;" src="/static/app/images/konstantina/epanek_logo_transparent_x60.png"></li>
+                <!-- <li class="divider"></li>
+                <li><img style="height: 63px;" src="/static/app/images/konstantina/epanek_logo_transparent_x60.png"></li> -->
             </ul>
         </div>
     </nav>
@@ -160,8 +160,8 @@
                         <label for="signUpConfirmPassword">Confirm Password</label>
                     </div>
                 </div>
-                <div class="row col s12" style="margin-bottom: 0px;"> 
-                    <button class="btn waves-effect waves-light" ng-click="signup_signup_pressed()">Sign up</button> <!-- modal-close --> 
+                <div class="row col s12" style="margin-bottom: 0px;">
+                    <button class="btn waves-effect waves-light" ng-click="signup_signup_pressed()">Sign up</button> <!-- modal-close -->
                     <div ng-show="false">
                     <p>
                         <small class="form-text text-muted">
