--- a/OpenBio/app/templates/app/index.html
+++ b/OpenBio/app/templates/app/index.html
@@ -24,7 +24,7 @@
 		window.password_reset_token = "{{ password_reset_token }}";
 		window.reset_signup_username = "{{ reset_signup_username }}";
 		window.reset_signup_email = "{{ reset_signup_email }}";
-		window.user_is_validated =  {% if user_is_validated %}true;{% else %}false;{% endif %} 
+		window.user_is_validated =  {% if user_is_validated %}true;{% else %}false;{% endif %}
 		window.init_interlink_args = {{ init_interlink_args | safe }};
 		window.OBC_PORT = {{ port }};
 		window.OBC_CONTROLLER_URL = "{{controller_url}}";
@@ -32,7 +32,7 @@
 		window.profile_clients = {{ profile_clients | safe}};
 		window.menu = null;
 		window.input_menu = null;
-		window.orcid_success = {% if orcid_success %}true;{% else %}false;{% endif %} 
+		window.orcid_success = {% if orcid_success %}true;{% else %}false;{% endif %}
 	</script>
 
 	<script src="/static/app/jquery-3.3.1.min.js"></script>
@@ -62,7 +62,7 @@
 	<link rel="stylesheet" href="/static/app/jquery-ui-1.12.1.custom/jquery-ui.min.css" type="text/css"/>
 	-->
 
-	<!-- 
+	<!--
 	<link rel="stylesheet" href="/static/app/jQuery-contextMenu-2.7.0/dist/jquery.contextMenu.min.css" type="text/css"/>
 	<script src="/static/app/jQuery-contextMenu-2.7.0/dist/jquery.contextMenu.min.js" type="text/javascript" charset="utf-8"></script>
 	-->
@@ -106,7 +106,7 @@
 	<script src="/static/app/angular.1.3.2/angular.min.js"></script>
 	-->
 
-	<!-- 1.7.2 unminified 
+	<!-- 1.7.2 unminified
 	<script src="/static/app/angular.js"></script>
 	-->
 
@@ -176,7 +176,7 @@
 	<script src="/static/app/cytoscape.js-cxtmenu-3.0.2/cytoscape-cxtmenu.js" type="text/javascript"
 		charset="utf-8"></script>
 
-	<!-- cytoscape 3.4.2 
+	<!-- cytoscape 3.4.2
 	<script src="/static/app/cytoscape.js-3.4.2/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
 	-->
 
@@ -220,16 +220,16 @@
 		</div>
 
 		<div ng-show="profile_container_show">
-			
+
 			<!-- PROFILE!! -->
 			{% include "app/profile.html" %}
-			
+
 			<!-- <a href ng-click="profile_save_pressed()">SAVE</a> -->
-			
+
 		</div>
-		
+
 		<!-- Documentation.html -->
-		
+
 		<div ng-show="documentation_container_show">
 			{% include "app/documentation.html" %}
 		</div>
@@ -302,7 +302,7 @@
 		<footer class="footer">
 			<div class="container">
 				<!-- <span class="text-muted">Place sticky footer content here.</span> -->
-				<img src="/static/app/images/logo23.png" class="rounded float-left" alt="...">
+				<!-- <img src="/static/app/images/logo23.png" class="rounded float-left" alt="..."> -->
 			</div>
 		</footer>
 		{% endcomment %}
