--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -35,7 +35,7 @@
 		window.orcid_success = {% if orcid_success %}true;{% else %}false;{% endif %}
 	</script>
 
-	<script src="/static/app/jquery-3.3.1.min.js"></script>
+	<script src="/static/app/node_modules/jquery/dist/jquery.min.js"></script>
 
 	<!--
 	<script src="/static/app/jquery-2.1.1/jquery-2.1.1.min.js"></script>
@@ -48,7 +48,7 @@
 	<link rel="stylesheet" href="/static/app/material-design-icons-3.0.1/iconfont/material-icons.css">
 
 	<!-- Materialize CSS-->
-	<link type="text/css" rel="stylesheet" href="/static/app/materialize/css/materialize.min.css"
+	<link type="text/css" rel="stylesheet" href="/static/app/node_modules/materialize-css/dist/css/materialize.min.css"
 		media="screen,projection" />
 
 	<!-- Animate CSS FIXME: Add animate as external dependency-->
@@ -86,20 +86,20 @@
 	-->
 
 	<!-- This is version 1.7.2 -->
-	<script src="/static/app/angular.min.js"></script>
+	<script src="/static/app/node_modules/angular/angular.min.js"></script>
 
 	<!-- For Select Perhaps we never use it!-->
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">  -->
-	<link rel="stylesheet" href="/static/app/select2-3.4.5/select2.css">
+	<link rel="stylesheet" href="/static/app/node_modules/select2/select2.css">
 
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css"> -->
-	<link rel="stylesheet" href="/static/app/selectize.js-0.8.5/dist/css/selectize.default.css">
+	<!-- <link rel="stylesheet" href="/static/app/selectize.js-0.8.5/dist/css/selectize.default.css"> --> 
 
-	<script src='/static/app/bower-angular-sanitize-1.7.2/angular-sanitize.min.js'></script>
+	<script src='/static/app/node_modules/angular-sanitize/angular-sanitize.min.js'></script>
 
-	<link rel="stylesheet" href="/static/app/ui-select-0.19.8/dist/select.min.css" type="text/css" />
+	<link rel="stylesheet" href="/static/app/node_modules/ui-select/dist/select.min.css" type="text/css" />
 	<!-- https://angular-ui.github.io/ui-select/ -->
-	<script src='/static/app/ui-select-0.19.8/dist/select.min.js'></script>
+	<script src='/static/app/node_modules/ui-select/dist/select.min.js'></script>
 
 
 	<!--
@@ -116,8 +116,8 @@
 	-->
 
 
-	<link rel="stylesheet" href="/static/app/jstree-3.3.5/dist/themes/default/style.min.css" type="text/css" />
-	<script src="/static/app/jstree-3.3.5/dist/jstree.min.js"></script>
+	<link rel="stylesheet" href="/static/app/node_modules/jstree/dist/themes/default/style.min.css" type="text/css" />
+	<script src="/static/app/node_modules/jstree/dist/jstree.min.js"></script>
 
 
 	<!--
@@ -130,7 +130,7 @@
 	<script src="/static/app/jstree-3.0.8/dist/jstree.min.js"></script>
 	-->
 
-	<script src="/static/app/ngJsTree-0.0.10/dist/ngJsTree.min.js"></script>
+	<script src="/static/app/node_modules/ng-js-tree/dist/ngJsTree.min.js"></script>
 
 	<!--
 	<script src="/static/app/ngJsTree-0.0.10/dist/ngJsTree.js"></script>
@@ -149,9 +149,9 @@
 
 
 	<link rel="stylesheet" href="/static/app/OBC.css" type="text/css" />
-	<script src="/static/app/ace-builds-1.4.1/src-min-noconflict/ace.js" type="text/javascript"
+	<script src="/static/app/node_modules/ace-builds/src-min-noconflict/ace.js" type="text/javascript"
 		charset="utf-8"></script>
-	<script src="/static/app/ace-builds-1.4.1/src-min-noconflict/ext-language_tools.js" type="text/javascript"
+	<script src="/static/app/node_modules/ace-builds/src-min-noconflict/ext-language_tools.js" type="text/javascript"
 		charset="utf-8"></script>
 
 
@@ -161,19 +161,20 @@
 	-->
 
 	<!-- cytoscape 3.4.0 -->
-	<script src="/static/app/cytoscape.js-3.4.0/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/static/app/node_modules/cytoscape/dist/cytoscape.min.js" type="text/javascript" charset="utf-8"></script>
 
 	<!--cytoscape tooltip -->
-	<script src="/static/app/popper.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/static/app/cytoscape.js-popper-1.0.4/cytoscape-popper.js" type="text/javascript"
+	
+	<script src="/static/app/node_modules/popper.js/dist/umd/popper.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/static/app/node_modules/cytoscape-popper/cytoscape-popper.js" type="text/javascript"
 		charset="utf-8"></script>
-	<script src="/static/app/tippy.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/static/app/node_modules/tippy.js/esm/index.all.min.js" type="text/javascript" charset="utf-8"></script>
 	<!--cytoscape tooltip css-->
-	<link rel="stylesheet" href="/static/app/tippy.css" />
+	<link rel="stylesheet" href="/static/app/node_modules/tippy.js/index.css" />
 	<link rel="stylesheet" href="/static/app/custom_tippy.css" />
 
 	<!-- cytoscape menu -->
-	<script src="/static/app/cytoscape.js-cxtmenu-3.0.2/cytoscape-cxtmenu.js" type="text/javascript"
+	<script src="/static/app/node_modules/cytoscape-cxtmenu/cytoscape-cxtmenu.js" type="text/javascript"
 		charset="utf-8"></script>
 
 	<!-- cytoscape 3.4.2
@@ -181,18 +182,18 @@
 	-->
 
 	<!-- timeline  vis-4.21.0 -->
-	<script src="/static/app/vis.min.js" type="text/javascript" charset="utf-8"></script>
-	<link rel="stylesheet" href="/static/app/vis.min.css" />
+	<script src="/static/app/node_modules/vis/dist/vis.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="/static/app/node_modules/vis/dist/vis.min.css" />
 
 	<!-- dagre 0.7.4 -->
-	<script src="/static/app/dagre-0.7.4/dist/dagre.min.js"> </script>
+	<script src="/static/app/node_modules/dagre/dist/dagre.min.js"> </script>
 	<script src="/static/app/cytoscape-dagre.js"></script>
 
 	<!-- Discourse js -->
 	<script src="/static/app/discourse.js"></script>
 
 	<!-- Pell js 1.0.6 Discourse graph Editor -->
-	<link rel="stylesheet" type="text/css" href="/static/app/pell-1.0.6/dist/pell.min.css">
+	<link rel="stylesheet" type="text/css" href="/static/app/node_modules/pell/dist/pell.min.css">
 
 
 </head>
@@ -274,7 +275,7 @@
 		</div>
 
 		<div class="container" ng-show="show_tools">
-			{% include "app/tools.html" %}
+			{% include "app/tools.html" %} <!-- requires selectize.js it is not loaded in this html -->
 		</div>
 		{% endcomment %}
 
@@ -343,7 +344,7 @@
 
 	<script type="text/javascript" src="/static/app/OBC.js" charset="utf-8"></script>
 
-	<script type="text/javascript" src="/static/app/materialize/js/materialize.min.js"></script>
+	<script type="text/javascript" src="/static/app/node_modules/materialize-css/dist/js/materialize.js"></script>
 	<script type="text/javascript" src="/static/app/konstantina/js/ui.js"></script>
 	{% if debug %}<script type="text/javascript" src="/static/app/tests.js"></script>{% endif %}
 	<script type="text/javascript" src="/static/app/OBC_app.js"></script>
@@ -355,7 +356,7 @@
 			$('.modal').modal();
 		});
 	</script>
-	<script src="/static/app/pell-1.0.6/dist/pell.min.js"></script>
+	<script src="/static/app/node_modules/pell/dist/pell.min.js"></script>
 	<script type="text/javascript">
 		var editor = window.editor = pell.init({
 			element: document.getElementById('editor'),
