--- a/app/templates/app/tools.html
+++ b/app/templates/app/tools.html
@@ -18,6 +18,7 @@ An idea for angular trees: https://angular-ui-tree.github.io/angular-ui-tree/#/b
               <div class="form-group row">
                 <label for="tsatsara" class="col-2 col-form-label"><strong>Search</strong></label> 
                 <div class="col-10">
+                    <!-- Requires selectize which is not loaded in index.html -->
                     <ui-select id="tsatsara" title="kkk" ng-model="selected.value" theme="selectize" close-on-select="true" style="width: 200px;" search-enabled="false">
                         <ui-select-match>
                             <span ng-bind="$select.selected.name"></span>
