added argo2 option

--- a/OpenBio/app/templates/app/right_panel.html
+++ b/OpenBio/app/templates/app/right_panel.html
@@ -515,7 +515,8 @@
                         <li><a ng-click="workflow_info_download_pressed('CWLTARGZ')">CWL tar.gz</a></li>
                         <li><a ng-click="workflow_info_download_pressed('CWLZIP')">CWL zip</a></li>
                         <li><a ng-click="workflow_info_download_pressed('AIRFLOW')">Airflow</a></li>
-                        <li><a ng-click="workflow_info_download_pressed('ARGO')">Argo</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('ARGO')">Argo (one container)</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('ARGO2')">Argo (multi containers)</a></li>
                         <li><a ng-click="workflow_info_download_pressed('NEXTFLOW')">Nextflow</a></li>
                         <li><a ng-click="workflow_info_download_pressed('SNAKEMAKE')">Snakemake</a></li>
                     </ul>
